Fixed shifting content on drop down box

--- a/packages/payment-gateway/src/assets/stylesheets/components/dropdown-button.scss
+++ b/packages/payment-gateway/src/assets/stylesheets/components/dropdown-button.scss
@@ -1,56 +1,60 @@
-.dropdown {
-    background-color: white;
-    border: none;
-    border-radius: 0.85em;
-    padding: 1em 1em 1em 1em;
-    width: 100%;
+.container {
+    //max-width: 25em;
 
-    .label{ 
-        display: flex;
-        justify-content: space-between;
+    .dropdown {
+        background-color: white;
+        border: none;
+        border-radius: 0.85em;
+        padding: 1em 1em 1em 1em;
+        //width: 100%;
 
-        p {
-            font-size: 1.35em;
-            font-weight: 300;
-        }
-
-        .left {
+        .label{ 
             display: flex;
-            padding-right: 2em;
-            
-            .logo {
-                padding: 0.2em 0.2em 0.2em 0.2em;
-            }
+            justify-content: space-between;
 
             p {
-                margin-left: 1em;
+                font-size: 1.35em;
+                font-weight: 300;
             }
-            
-        }
 
-        .right {
-            display: flex;
-            padding-left: 2em;
+            .left {
+                display: flex;
+                padding-right: 2em;
+                
+                .logo {
+                    padding: 0.2em 0.2em 0.2em 0.2em;
+                }
 
-            p {
-                color: #958DB7;
-                margin-right: 1em;
+                p {
+                    margin-left: 1em;
+                }
+                
+            }
+
+            .right {
+                display: flex;
+                padding-left: 2em;
+
+                p {
+                    color: #958DB7;
+                    margin-right: 1em;
+                }
+
+                .triangle {
+                    margin-top: 0.85em;
+                }
+
             }
 
             .triangle {
-                margin-top: 0.85em;
+                content:"";
+                width: 0;
+                height: 0;
+                border-left: 0.25em solid transparent;
+                border-right: 0.25em solid transparent;
+                border-top: 0.5em solid #958DB7;
+                margin-top: 0.5em;
             }
-
-        }
-
-        .triangle {
-            content:"";
-            width: 0;
-            height: 0;
-            border-left: 0.25em solid transparent;
-            border-right: 0.25em solid transparent;
-            border-top: 0.5em solid #958DB7;
-            margin-top: 0.5em;
         }
     }
 }
